Nieuwe url van Search-icon CSS #12

--- a/styles/style.css
+++ b/styles/style.css
@@ -76,7 +76,7 @@ nav {
             width: 3.25em;
             padding-left: 3em;
 
-            background-image: url(/assets/search-icon.svg);
+            background-image: url(https://sieuwkesheta.github.io/look-and-feel-corporate-identity/assets/search-icon.svg);
             background-size: 2em;
             background-repeat: no-repeat;
             background-position:.625em center;
