--- a/styles/style.css
+++ b/styles/style.css
@@ -115,7 +115,7 @@ nav {
         background-color: transparent;
         border: none;
 
-        svg {
+        & svg {
             width: 3em;
 
             @media (min-width: 600px) {
