'Laatste Nieuws' link duidelijkere styling gegeven dat het een link is close #5

--- a/styles/style.css
+++ b/styles/style.css
@@ -353,6 +353,17 @@ nav {
     }
 }
 
+        & a {
+            color: var(--white-color);
+            text-underline-offset: 4px;
+
+            &:hover {
+                color: var(--primary-lighter-color);
+                text-shadow: 1px 1px 1px rgba(48, 48, 48, 0.395);
+            }
+            
+            &:active {
+                color: var(--accent-color);
 
 footer {
     background-color: var(--primary-color);
