--- a/styles/style.css
+++ b/styles/style.css
@@ -322,6 +322,7 @@ nav {
         margin: 0;
         color: var(--white-color);
         margin-bottom: 0.5em;
+        text-align: center;
 
         @media (min-width:750px) {
             grid-column: 1/-1;
@@ -448,14 +449,13 @@ footer {
 
 .contact-form {
     background-color: var(--primary-color);
-    padding: 1em;
 
     & h2 {
         color: var(--white-color);
+        margin-bottom: 0.5em;
     }
 
     .contact-form-inside {
-        margin: 0.5em 1em 1em;
         display: grid;
         gap: 1em;
 
