'Deelnemende Hogescholen' overgenomen van project 'All Human' en er een werkend carousel van gemaakt CSS #12

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@ html {
 
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 :root {
     /* 'Lees meer'-knop */
     .MeerNieuws-ad {
@@ -24,6 +25,7 @@ html {
         }
     }
 }
+
 header {
     position:relative;
     z-index: 10;
@@ -453,6 +455,70 @@ nav {
         }
     }
 
+}
+
+/* Deelnemende hogescholen sectie op home-pagina */
+.participating-colleges {
+    margin: 4em 1em;
+
+    & h2 {
+        text-align: center;
+
+        & a {
+            color: var(--black-color);
+            text-underline-offset: 4px;
+
+            &:hover {
+                color: var(--primary-lighter-color);
+                text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.395);
+            }
+            
+            &:active {
+                color: var(--accent-color);
+            }
+        }
+    }
+
+    & .carousel {
+        display: flex;
+        width: 100%;
+        overflow-x: scroll;
+
+        & .carousel-inside {
+            list-style: none;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            gap: 1em;
+            padding: 1em;
+            animation: scroll 45s infinite linear;
+            
+            /* Pauseert de animatie als 'reduced-motion' aan staat */
+            @media (prefers-reduced-motion: reduce) {
+                animation-play-state: paused !important;
+            }
+            
+            & li {
+                flex: 0 0 5em;
+        
+                & img {
+                    height: 3em;
+                    width: auto;
+                    transition: 0.2s;
+
+                    &:hover {
+                        scale: 1.1;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/* Animatie voor carousel */
+@keyframes scroll {
+    from {translate: 0;}
+    to {translate: -100%;}
 }
 
 
