Submit button aangepast met hover en gecenterd #8

--- a/styles/style.css
+++ b/styles/style.css
@@ -662,9 +662,12 @@ footer {
         border-radius: 5px;
         padding: 1em;
         
-        & .submit-button {
-            display: flex;
-            justify-content: center;
+        .Submit-ad {
+            justify-self:center;
+
+            &:hover {
+                outline: 1px solid var(--accent-color)
+            }
         }
 
         textarea {
