--- a/styles/style.css
+++ b/styles/style.css
@@ -381,7 +381,7 @@ nav {
 
             &::after {
             content:"";
-            background-image: url(/assets/arrow-right-white.svg);
+            background-image: url(https://sieuwkesheta.github.io/look-and-feel-corporate-identity/assets/arrow-right-white.svg);
             background-repeat: no-repeat;
             background-position: 0.3em 0.9em;
             background-size: 0.4em;
@@ -479,7 +479,7 @@ nav {
 
             &::after {
             content:"";
-            background-image: url(/assets/arrow-right.svg);
+            background-image: url(https://sieuwkesheta.github.io/look-and-feel-corporate-identity/assets/arrow-right.svg);
             background-repeat: no-repeat;
             background-position: 0.3em 0.9em;
             background-size: 0.4em;
